bug:68750 'border-spacing:0' not work in ie, so use 'border-collapse:collapse' to make the dialog look and feel the same as firefox.And add '#' before the attribute to make only ie read the attribute
http://bugzilla.zimbra.com/show_bug.cgi?id=68750

--- a/ZimbraWebClient/WebRoot/admin_skins/serenity/skinExt.css
+++ b/ZimbraWebClient/WebRoot/admin_skins/serenity/skinExt.css
@@ -376,3 +376,7 @@ div.ZmSelectedHeaderBg {
 .ZaSearchOptionDialog {
     border: 1px solid black;
 }
+
+.DwtDialog .WindowOuterContainer table{
+    #border-collapse: collapse;  /*only IE read the attribute after '#'*/
+}
